# tinder-claude

./: .gitignore  README.md  generate_design_doc.py  pyproject.toml
app/: main.py
app/models/: schemas.py
app/routes/: feed.py  swipe.py  users.py
app/services/: feed_service.py  store.py  swipe_service.py
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/tracks/core_api_20260206/: index.md  metadata.json  plan.md  spec.md
tests/: conftest.py  test_api.py  test_feed_service.py  test_store.py  test_swipe_service.py
